# light-bitcoin

./: Cargo.toml
chain/: Cargo.toml
chain/src/: block.rs  block_header.rs  indexed_block.rs  indexed_header.rs  indexed_transaction.rs  read_and_hash.rs  transaction.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
keys/: Cargo.toml
merkle/: Cargo.toml
merkle/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: bytes.rs  compact.rs  hash.rs
script/: Cargo.toml
