[package]
name = "light-bitcoin-chain"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "hex/std",
  "serde",

  "light-bitcoin-crypto/std",
  "light-bitcoin-primitives/std",
  "light-bitcoin-serialization/std",

  "ink_storage/std",
  "ink_metadata/std",
  "ink_primitives/std",
]
ink = [
  "ink_storage",
  "ink_primitives",
]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

light-bitcoin-crypto = { path = "../crypto", default-features = false }
light-bitcoin-primitives = { path = "../primitives", default-features = false }
light-bitcoin-serialization = { path = "../serialization", default-features = false, features = ["derive"] }

ink_storage = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false, optional = true }
ink_metadata = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "merkle_root"
path = "benches/merkle_root.rs"
harness = false
