[package]
name = "light-bitcoin-merkle"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",

  "light-bitcoin-chain/std",
  "light-bitcoin-primitives/std",
  "light-bitcoin-serialization/std",

  "ink_storage/std",
  "ink_metadata/std",
  "ink_primitives/std",
]
ink = [
  "light-bitcoin-chain/ink",
  "light-bitcoin-primitives/ink",

  "ink_storage",
  "ink_primitives",
]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

light-bitcoin-chain = { path = "../chain", default-features = false }
light-bitcoin-primitives = { path = "../primitives", default-features = false }
light-bitcoin-serialization = { path = "../serialization", default-features = false, features = ["derive"] }

ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, optional = true }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, optional = true }

[dev-dependencies]
hashbrown = "0.9"
hex = "0.4"
rand = "0.8"
light-bitcoin-crypto = { path = "../crypto" }
