[package]
name = "light-bitcoin-primitives"
version = "0.2.0"
authors = ["The ChainX Authors"]
edition = "2018"
license = "GPL-3.0"

[features]
default = ["std"]
std = [
  "byteorder/std",
  "fixed-hash/std",
  "hex/std",
  "serde",

  "codec/std",
  "scale-info/std",

  "impl-serde",
  "impl-codec/std",
  "primitive-types/std",
  "primitive-types/serde",

  "ink_storage/std",
  "ink_metadata/std",
  "ink_primitives/std",
]
ink = [
  "ink_storage",
  "ink_primitives",
  "array-init",
]

[dependencies]
byteorder = { version = "1.3", default-features = false }
fixed-hash = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"], optional = true }

codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

impl-serde = { version = "0.3", optional = true }
impl-codec = { version = "0.5", default-features = false }
primitive-types = { version = "0.9", default-features = false, features = ["codec"] }

ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, optional = true }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, optional = true }
array-init = { version = "1.0", default-features = false, features = ["const-generics"], optional = true }
